# adventofcode

./: .gitmodules
2015/rust/: Cargo.toml  daily-template  justfile
2015/rust/day-01/: Cargo.toml  input1.txt  input2.txt
2015/rust/day-01/src/: part1.rs  part2.rs
2015/rust/day-02/: input1.txt  input2.txt
2015/rust/day-02/src/: part1.rs  part2.rs
2015/rust/day-03/: Cargo.toml  input1.txt  input2.txt
2015/rust/day-03/src/: part1.rs  part2.rs
2015/rust/day-04/: Cargo.toml  input1.txt  input2.txt
2015/rust/day-04/src/: part1.rs  part2.rs
2015/rust/day-05/: Cargo.toml  input1.txt  input2.txt
2015/rust/day-05/src/: part1.rs  part2.rs
2015/rust/day-06/: Cargo.toml  input1.txt  input2.txt
2015/rust/day-06/src/: part1.rs  part2.rs
2015/rust/day-07/: Cargo.toml  input1.txt  input2.txt
2015/rust/day-07/benches/: benchmarks.rs
2015/rust/day-07/src/: lib.rs  parser.rs  part1.rs  part2.rs
2015/rust/day-08/: Cargo.toml  input1.txt  input2.txt
2015/rust/day-08/src/: part1.rs  part2.rs
2015/rust/day-09/: Cargo.toml  input1.txt  input2.txt
2015/rust/day-09/src/: parser.rs  part1.rs  part2.rs
2015/rust/day-10/: input1.txt  input2.txt
2015/rust/day-10/src/: part1.rs  part2.rs
2015/rust/day-11/: Cargo.toml  input1.txt  input2.txt
2015/rust/day-11/src/: part1.rs
2022/go/: go.work
2023/rust/: Cargo.toml  README.md  justfile
2024/rust/: .gitignore  Cargo.toml  justfile
2025/rust/: .gitignore  Cargo.toml  justfile
day1/: README.md  calories.go
day2/: rps_test.go
templates/: regenerate_inputs.sh  setup.sh
templates/rust/: README.md
(+90 files in other folders)
